<resources>
    <string name="app_name">Learn Islam</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main" translatable="true">الرئيسية</string>
    <string name="level">المستوى</string>
    <string name="next">التالي</string>
    <string name="language">اللغة</string>
    <string name="choose_language">اختر اللغة</string>
    <string name="arabic">العربية</string>
    <string name="french">Français</string>
    <string name="english">English</string>
    <string name="initiating_data_for_first_time">جاري تهيئة البيانات للمرة الأولى…</string>
    <string name="retry">إعادة المحاولة</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="first_ayah">\"من يرد الله به خيرا يفقهه في الدين.\"</string>
    <string name="intro_one_info">فهذه جملة من المحاضرات الموجزة في التعريف بدين الإسلام العظيم، وبيان خصائصه ومحاسنه،
        وذكر ما يتعلق بعقيدة التوحيد، وأقسام التوحيد، وكذا ما يتعلق بنبي الإسلام محمد ﷺ، وذكر جملة من الأدلة على صدق
        رسالته، وغير ذلك من أمور هذا الدين العظيم.
    </string>
    <string name="finish">إنهاء</string>
    <string name="intro_two_info">في هذا الموقع تستطيع أن تتعلم أصول دينك بطريقة سهلة وميسرة..</string>
    <string name="intro_third_info">صنعنا مجموعة من التمارين، تستطيع من خلالها معرفة مستواك، وهذه التمارين مناسبة لجميع
        الأعمار..
    </string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="soon">Soon</string>
    <string name="start">ابدأ</string>
    <string name="easy_level">مستوى سهل</string>
    <string name="lessons_list">قائمة الدروس</string>
    <string name="hard_level">مستوى صعب</string>
    <string name="translation">الترجمة</string>
    <string name="output">التفريغ</string>
    <string name="sound_hint">
        <u>للإستماع وتحميل المادة الصوتية</u>
    </string>
    <string name="audio">التفريغ الصوتي</string>
</resources>
