<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.LanguageActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadDataLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/initiating_data_for_first_time"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/retry"
                android:visibility="gone"
                android:textSize="16sp"
                app:layout_constraintCircleRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressText" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/languageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                style="@style/BoldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/choose_language"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/arabicCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/arabic"
                    android:textSize="20sp" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/frenchCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/arabicCard">

                <TextView
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/french"
                    android:textSize="20sp" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:id="@+id/englishCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/frenchCard">

                <TextView
                    style="@style/NormalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/english"
                    android:textSize="20sp" />
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
